--- a/01-drumKit/styles.css
+++ b/01-drumKit/styles.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-image: url(assets/img/mountains.jpg);
     width: 100%;
@@ -43,6 +48,15 @@ kbd{
     text-align: uppercase;
     letter-spacing: 1px;
     color:#ffc600 ;
+}
+
+.estupido{
+    margin: 0px auto;
+    padding: 0px auto;
+    color: red;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    background-image: url(assets/img/mountains.jpg);
 }
 
 
