--- a/02-css-clock/index.css
+++ b/02-css-clock/index.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   
-}
+} */
 
 html {
     background-image: url(assets/img/tierra.jpg);
@@ -45,9 +45,13 @@ body{
 .hand{
     width: 50%;
     height: 6px;
-    background: whitesmoke;
+    background: white;
     position: absolute;
     top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.5s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
 
