Proyecto 23: Speech en español

--- a/08-Fun-HTML-Canvas/index.css
+++ b/08-Fun-HTML-Canvas/index.css
@@ -1,16 +1,15 @@
 
-<<<<<<< HEAD
-html,body{
-    margin: 0;
-}
-=======
-
 html,body{
     margin: 0;
 }
 
->>>>>>> 086f25a7256722e9ac85875e0ea242382b955da8
+html,body{
+    margin: 0;
+}
 
+.overDraw {
+    border: 1px solid black;
+}
 
 
 
